# zone_cg_template

./: .gitignore  CMakeLists.txt  README.md
config/: config.h.in
html/: CMakeCache.txt
include/zone_cg_template/: config.h
src/: main.cpp
